# Ar_platform_ros

./: CMakeLists.txt  package.xml  start.launch
launch/: start.launch
msg/: MarkerData.msg
nodes/: Aruco_analizer.py  Aruco_detector.py  Visualizer.py  aruco_detector_node.py  camera_node.py  listener.py  markers_analizer_node.py  visualizer_node.py
src/visuallize_utils/: Visualizer.py
