<?xml version="1.0"?>
<package format="2">
  <name>platform</name>
  <version>0.0.0</version>
  <description>The platform package</description>

  <maintainer email="safik@todo.todo">safik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



  <export>

  </export>
</package>
